--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.application.name=kata_test9
+# MySQL properties
+server.port=9090
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/my_db
+spring.datasource.username=bestuser
+spring.datasource.password=bestuser
 
+# Hibernate properties
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+spring.mvc.hiddenmethod.filter.enabled=true
+#logging.level.org.springframework=debug
+#logging.level.org.hibernate=debug
