--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.mvc.hiddenmethod.filter.enabled=true
 #logging.level.org.springframework=debug
 #logging.level.org.hibernate=debug
